# cycle-auto

./: .gitignore  Alpha_XYF000001.tpl.py  my_factor_test_2.py  pyproject.toml  requirements.txt  step_1_run_factor_test.py  step_2_generate_excel.py  step_2_generate_excel_and_modify_sign.py  step_3_generate_csv.py  step_4_generate_images.py  step_5_file_collection.py  variable.xlsx
BAKbin/: config.xml  pydemo.py
BAKbin/cache/pnl/: Alpha_ZY00001.pnl.txt  pnl.txt
BAKbin/tools/: alphaPool.py  simsum2.py
bin.tpl/: backtest_new.py  config.xml  my_factor_test.py
pyalphacode/hfs_pyalpha/: hfs_pyalpha_demo001.c  hfs_pyalpha_demo001.py  setup.py
pylib/: Alpha_XYF000001.py
