[tool.poetry]
name = "cycle-auto"
version = "0.1.0"
description = ""
authors = ["panhaoyu <panhaoyu.china@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
